--- a/src/component/Recipes/ListRecipes.module.css
+++ b/src/component/Recipes/ListRecipes.module.css
@@ -1,6 +1,8 @@
 .list-recipe{
-    display: flex;
+  display: flex;
   flex-wrap: wrap;
+  margin-left: auto;
+  margin-right: auto;
   justify-content: flex-start;
 }
 
