--- a/src/component/Recipes/Recipe.module.css
+++ b/src/component/Recipes/Recipe.module.css
@@ -1,20 +1,40 @@
 .img {
     border-radius: 10px;
-    padding-bottom: 10px;
+    padding-top: 10px;
+    padding-bottom: 5px;
 }
 
 .row {
+    overflow: auto;
+    padding-bottom: 5px;
     display: flex;
-    flex-wrap: wrap;
+    align-items: center;
+    position: relative;
+}
+
+.icon-button{
+    margin-bottom: 5px;
+}
+
+.icon-container{
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 1;
+    margin-top: 18px;
+    margin-right: 8px;
 }
 
 .col-1 {
-    flex: 3;
     text-align: left;
+    width: 70%;
+    float: left;
 }
+
 .col-2 {
-    flex: 1;
     text-align: right;
+    width: 30%;
+    float: right;
 }
 
 .name {
@@ -44,8 +64,7 @@
     color: #707070;
 }
 
-.recipe-border{
+.recipe-border {
     width: 220px;
-    padding-top: 20px;
-    padding-left: 20px;
+    margin: 8px 8px 32px;
 }
