--- a/src/component/UI/Search.module.css
+++ b/src/component/UI/Search.module.css
@@ -13,10 +13,10 @@
     border: none;
     color: #3A3A3A;
     background-color: #fff;
-    width: 40%;
-    padding: 12px;
+    width: 35%;
+    padding: 15px;
     border-radius: 50px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 10px rgba(0,0,0,0.12), 0 0 1px rgba(0,0,0,0.05) inset;
 }
 
 .icon-border {
