--- a/src/page/Home.module.css
+++ b/src/page/Home.module.css
@@ -10,7 +10,7 @@
 
 .search{
     position: absolute;
-    padding: 20px;
+    padding: 30px;
     width: 100%;
     top: 0;
     left: 50%;
@@ -18,12 +18,28 @@
     z-index: 1;
 }
 .recipe_list{
-    width: 60%;
     text-align: center;
-    margin:auto
+    margin: auto;
+    padding-top: 100px;
+    transition: opacity 400ms ease;
+    margin: 57px auto 0;
+    max-width: 944px;
 }
 .container{
     width: 100%;
     text-align: center;
     margin:auto
+}
+
+.containerSlider{
+    width: 100%;
+    height: 500px;
+    margin: 0 auto;
+}
+
+.select-container{
+    margin-bottom: 20px;
+    text-align: left;
+    padding-left: 12px;
+    border-bottom: 2px solid #e3e3e3;
 }
