--- a/src/component/UI/Tab.module.css
+++ b/src/component/UI/Tab.module.css
@@ -3,15 +3,16 @@
  color: black;
  
 }
-h3 {
- margin-right: 30px;
- color: rgba(0, 0, 0, 0.5);
-}
+
 .active {
     border-bottom: 2px solid #3a9691;
-    height: 30px;
-    color: black;
+    color: #232323;
 }
 a {
     text-decoration: none;
 }
+h3 {
+    margin-right: 30px;
+    color: rgba(0, 0, 0, 0.5);
+    /* height: 22px; */
+   }
