--- a/src/page/Login.module.css
+++ b/src/page/Login.module.css
@@ -18,3 +18,8 @@ img {
     padding: 10px 20px;
     max-width: 80%;
 }
+h3 {
+    margin-right: 30px;
+    font-family: 'Josefin Sans', sans-serif;
+    color: #232323;
+   }
