--- a/src/component/UI/IconButton.module.css
+++ b/src/component/UI/IconButton.module.css
@@ -13,3 +13,9 @@
     display: flex;
     align-items: center;
 }
+.title {
+    color: #232323;
+    font-size: 30px;
+    font-weight: 400;
+    margin: 0;
+}
