--- a/src/page/ChangePassword.module.css
+++ b/src/page/ChangePassword.module.css
@@ -10,3 +10,10 @@
 .button Button {
     margin-left: 10px;
 }
+.error {
+    font-size: 16px;
+    color: #ae342b;
+    font-weight: 400;
+    font-style: italic;
+    margin: 0px;
+}
